A lot of changes. Too many to count and describe
