# be/src/entities/user/route.ts
@@ -4,7 +4,7 @@ import * as Controller from './controller.js';
 
 /**********************************************************************************/
 
-const { createOne, readOne, updateOne, deleteOne } = Controller;
+const { createOne, readOne, updateOne, deleteOne, reactivateOne } = Controller;
 
 /**********************************************************************************/
 
@@ -12,4 +12,5 @@ export default Router()
   .post('/users', json({ limit: '16kb' }), createOne)
   .get('/users/:userId', json({ limit: '2kb' }), readOne)
   .patch('/users/:userId', json({ limit: '16kb' }), updateOne)
-  .delete('/users/:userId', json({ limit: '2kb' }), deleteOne);
+  .delete('/users/:userId', json({ limit: '2kb' }), deleteOne)
+  .patch('/users/reactivate/:userId', json({ limit: '2kb' }), reactivateOne);
